2002-12-02  Andrew Stadt  <acstadt@sympatico.ca>

	* include/shellapi.h (_SHFILEOPSTRUCTA,_SHFILEOPSTRUCTW):
	Wrap with pshpack2.h/poppack.h to correct alignment.

2002-12-02  Ken Fitlike  <kenfitlike@users.sourceforge.net>

	* include/commctrl.h (LVBKIF_*): Add defines.
	(LVM_SETIMAGE[AW]): Add defines and UNICODE mappings.
	(LVM_GETIMAGE[AW]): Add defines and UNICODE mappings.
	(LVBKIMAGE[AW]): Add defines and UNICODE mappings.
	(LPLVBKIMAGE[AW]): Add defines and UNICODE mappings.
	(LVM_GETBKIMAGE[AW]): Add defines and UNICODE mappings.
	(LVM_SETBKIMAGE[AW]): Add defines and UNICODE mappings.
	(ListView_GetBkImage): Add define.
	(ListView_SetBkImage): Add define.
	(LVBKIMAGE): Add structures and typedefs.

2002-11-25  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Increment to version 2.2
	* Makefile.in: Ditto.

2002-11-25  Earnie Boyd  <earnie@users.sf.net>

	* lib/Makefile.in (dist, install): Correct the install destinations.
	* lib/ddk/Makefile.in (dist, install): Ditto.

2002-11-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/uuid.c (CATID_InternetAware,CLSID_HttpSProtocol,
	CLSID_PSUrlMonProxy,CLSID_StdURLMoniker,IID_IObjectWithSite,
	IID_IPersistMoniker,IID_IProgressNotify): Correct off-by-one bug
	in definitions.
	(CLSID_CFontPropPage00, GUID_FONTUNDERSCORE11,
	IID_IOleControlSite89): Remove.

2002-11-15  Christopher Faylor  <cgf@redhat.com>

	* lib/uuid.c (IID_IRunnableObject): Remove duplicate definition.
	(IID_IStdMarshalInfo): Ditto.

2002-11-15  Christopher Faylor  <cgf@redhat.com>

	* lib/uuid.c (IID_IOleInPlaceSite): Remove duplicate definition.
	(IID_IPersistStorage): Ditto.

2002-11-15  Weiqi Gao  <weiqigao@users.sourceforge.net>

	* lib/uuid.c (CLSID_PSClassObject, CLSID_PSEnumerators,
	IID_IClassActivator, IID_IClientSecurity, IID_ICreateTypeInfo,
	IID_ICreateTypeLib2, IID_IOleInPlaceSite, IID_IPersistStorage,
	IID_IRunnableObject, IID_IServerSecurity, IID_IStdMarshalInfo):
	Correct definitions.
