@@ -457,8 +457,10 @@ extern "C" {
 #if (_WIN32_IE >= 0x0400)			/* IE4.0 ??? */
 #define TTM_UPDATE		    (WM_USER+29)
 #endif
-#define TTN_NEEDTEXTA	(TTN_FIRST-0)
-#define TTN_NEEDTEXTW	(TTN_FIRST-10)
+#define TTN_GETDISPINFOA    (TTN_FIRST - 0)
+#define TTN_GETDISPINFOW    (TTN_FIRST - 10)
+#define TTN_NEEDTEXTA	TTN_GETDISPINFOA
+#define TTN_NEEDTEXTW	TTN_GETDISPINFOW
 #define TTN_SHOW	(TTN_FIRST-1)
 #define TTN_POP	(TTN_FIRST-2)
 #define UD_MAXVAL	0x7fff
@@ -1652,20 +1654,30 @@ typedef struct _TT_HITTESTINFOW {
 	POINT pt;
 	TOOLINFOW ti;
 } TTHITTESTINFOW,*LPHITTESTINFOW;
-typedef struct tagTOOLTIPTEXTA {
+typedef struct tagNMTTDISPINFOA {
 	NMHDR hdr;
 	LPSTR lpszText;
 	char szText[80];
 	HINSTANCE hinst;
 	UINT uFlags;
-} TOOLTIPTEXTA,*LPTOOLTIPTEXTA;
-typedef struct tagTOOLTIPTEXTW {
-	NMHDR hdr;
-	LPWSTR lpszText;
-	WCHAR szText[80];
-	HINSTANCE hinst;
-	UINT uFlags;
-} TOOLTIPTEXTW,*LPTOOLTIPTEXTW;
+#if (_WIN32_IE >= 0x0300)
+	LPARAM lParam;
+#endif
+} NMTTDISPINFOA, *LPNMTTDISPINFOA;
+#define TOOLTIPTEXTA	NMTTDISPINFOA
+#define LPTOOLTIPTEXTA	LPNMTTDISPINFOA
+typedef struct tagNMTTDISPINFOW {
+ 	NMHDR hdr;
+ 	LPWSTR lpszText;
+ 	WCHAR szText[80];
+ 	HINSTANCE hinst;
+ 	UINT uFlags;
+#if (_WIN32_IE >= 0x0300)
+	LPARAM lParam;
+#endif
+} NMTTDISPINFOW, *LPNMTTDISPINFOW;
+#define TOOLTIPTEXTW	NMTTDISPINFOW
+#define LPTOOLTIPTEXTW	LPNMTTDISPINFOW
 typedef struct _UDACCEL {
 	UINT nSec;
 	UINT nInc;
@@ -2439,6 +2451,7 @@ typedef HDITEMW HDITEM;
 typedef TOOLINFOW TOOLINFO,*PTOOLINFO,*LPTOOLINFO;
 typedef TTHITTESTINFOW TTHITTESTINFO,*LPHITTESTINFO;
 typedef TOOLTIPTEXTW TOOLTIPTEXT,*LPTOOLTIPTEXT;
+typedef NMTTDISPINFOW NMTTDISPINFO, *LPNMTTDISPINFO;
 typedef TV_ITEMW TV_ITEM,*LPTV_ITEM;
 typedef TVITEMW TVITEM,*LPTVITEM;
 #if (_WIN32_IE >= 0x0400)
@@ -2508,6 +2521,7 @@ typedef NMTREEVIEWW NMTREEVIEW,*LPNMTREEVIEW;
 #define TTM_ENUMTOOLS	TTM_ENUMTOOLSW
 #define TTM_GETCURRENTTOOL	TTM_GETCURRENTTOOLW
 #define TTN_NEEDTEXT TTN_NEEDTEXTW
+#define TTN_GETDISPINFO TTN_GETDISPINFOW
 #define SB_GETTEXT	SB_GETTEXTW
 #define SB_SETTEXT	SB_SETTEXTW
 #define SB_GETTEXTLENGTH	SB_GETTEXTLENGTHW
@@ -2603,6 +2617,7 @@ typedef HDITEMA HDITEM;
 typedef TOOLINFOA TOOLINFO,*PTOOLINFO,*LPTOOLINFO;
 typedef TTHITTESTINFOA TTHITTESTINFO,*LPHITTESTINFO;
 typedef TOOLTIPTEXTA TOOLTIPTEXT,*LPTOOLTIPTEXT;
+typedef NMTTDISPINFOA NMTTDISPINFO, *LPNMTTDISPINFO;
 typedef TV_ITEMA TV_ITEM,*LPTV_ITEM;
 typedef TVITEMA TVITEM,*LPTVITEM;
 #if (_WIN32_IE >= 0x0400)
@@ -2669,6 +2684,7 @@ typedef NMTREEVIEWA NMTREEVIEW,*LPNMTREEVIEW;
 #define TTM_ENUMTOOLS	TTM_ENUMTOOLSA
 #define TTM_GETCURRENTTOOL TTM_GETCURRENTTOOLA
 #define TTN_NEEDTEXT TTN_NEEDTEXTA
+#define TTN_GETDISPINFO TTN_GETDISPINFOA
 #define SB_GETTEXT	SB_GETTEXTA
 #define SB_SETTEXT	SB_SETTEXTA
 #define SB_GETTEXTLENGTH	SB_GETTEXTLENGTHA
